scrapcore_serialization_macro/src/snapshots/scrapcore_serialization_macro__tests__registry_tests@custom_all.rs.snap
---
source: scrapcore_serialization_macro/src/tests.rs
expression: check_registry(path)
input_file: scrapcore_serialization_macro/src/test_cases/registry/custom_all.rs
---
#[registry(
    error = "ModelError",
    item_name = CustomItem,
    serialized_item_name = CustomSerializedItemName,
    item_kind_name = CustomKind,
    assets_kind_name = CustomAsset,
    registry_name = CustomRegistry,
    partial_registry_name = CustomPartialRegistry
)]
pub enum Model {
    #[model(collection)]
    Test(A),
    #[model(singleton)]
    TestSingle(B),
    #[model(asset)]
    TestAsset(Option<A>),
}
#[derive(Debug)]
pub enum CustomItem {
    TestSingle(B),
    Test(A),
}
#[derive(Debug, Clone, serde::Serialize, serde::Deserialize)]
#[derive(schemars::JsonSchema)]
#[serde(rename = "Test")]
#[serde(tag = "version")]
pub enum VersionedTest {
    #[serde(rename = "1")]
    V1(<A as scrapcore_serialization::serialization::SerializationFallback>::Fallback),
}
#[automatically_derived]
impl<
    Registry: scrapcore_serialization::registry::PartialRegistry,
> scrapcore_serialization::serialization::DeserializeModel<A, Registry> for VersionedTest
where
    <A as scrapcore_serialization::serialization::SerializationFallback>::Fallback: scrapcore_serialization::serialization::DeserializeModel<
        A,
        Registry,
    >,
{
    fn deserialize(
        self,
        registry: &mut Registry,
    ) -> Result<A, DeserializationError<Registry>> {
        match self {
            Self::V1(data) => data.deserialize(registry),
        }
    }
}
#[derive(Debug, Clone, serde::Serialize, serde::Deserialize)]
#[derive(schemars::JsonSchema)]
#[serde(rename = "TestSingle")]
#[serde(tag = "version")]
pub enum VersionedTestSingle {
    #[serde(rename = "1")]
    V1(<B as scrapcore_serialization::serialization::SerializationFallback>::Fallback),
}
#[automatically_derived]
impl<
    Registry: scrapcore_serialization::registry::PartialRegistry,
> scrapcore_serialization::serialization::DeserializeModel<B, Registry>
for VersionedTestSingle
where
    <B as scrapcore_serialization::serialization::SerializationFallback>::Fallback: scrapcore_serialization::serialization::DeserializeModel<
        B,
        Registry,
    >,
{
    fn deserialize(
        self,
        registry: &mut Registry,
    ) -> Result<B, DeserializationError<Registry>> {
        match self {
            Self::V1(data) => data.deserialize(registry),
        }
    }
}
pub type TestId = scrapcore_serialization::registry::CollectionItemId<A>;
#[derive(Debug, Clone, serde::Serialize, serde::Deserialize)]
#[derive(schemars::JsonSchema)]
#[serde(tag = "type")]
#[serde(rename = "CustomItem")]
pub enum CustomSerializedItemName {
    TestSingle(VersionedTestSingle),
    Test(
        scrapcore_serialization::registry::entry::RegistryEntrySerialized<VersionedTest>,
    ),
}
#[derive(Debug, Copy, Clone, Eq, PartialEq, serde::Serialize, serde::Deserialize)]
#[derive(schemars::JsonSchema)]
pub enum CustomKind {
    TestSingle,
    Test,
}
#[automatically_derived]
impl std::fmt::Display for CustomKind {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(
            f, "{}", match self { CustomKind::TestSingle => stringify!(TestSingle),
            CustomKind::Test => stringify!(Test), }
        )
    }
}
#[derive(Debug, Copy, Clone, Eq, PartialEq, serde::Serialize, serde::Deserialize)]
#[derive(schemars::JsonSchema)]
pub enum CustomAsset {
    TestAsset,
}
#[automatically_derived]
impl std::fmt::Display for CustomAsset {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{}", match self { CustomAsset::TestAsset => stringify!(TestAsset), })
    }
}
#[automatically_derived]
impl scrapcore_serialization::registry::kind::ItemKindProvider<B> for CustomRegistry {
    fn kind() -> Self::ItemKind {
        CustomKind::TestSingle
    }
}
#[automatically_derived]
impl scrapcore_serialization::registry::kind::ItemKindProvider<A> for CustomRegistry {
    fn kind() -> Self::ItemKind {
        CustomKind::Test
    }
}
#[automatically_derived]
impl scrapcore_serialization::registry::kind::AssetKindProvider<Option<A>>
for CustomRegistry {
    fn asset_kind() -> Self::AssetKind {
        CustomAsset::TestAsset
    }
}
#[automatically_derived]
impl scrapcore_serialization::registry::kind::ItemKindProvider<B>
for CustomPartialRegistry {
    fn kind() -> Self::ItemKind {
        CustomKind::TestSingle
    }
}
#[automatically_derived]
impl scrapcore_serialization::registry::kind::ItemKindProvider<A>
for CustomPartialRegistry {
    fn kind() -> Self::ItemKind {
        CustomKind::Test
    }
}
#[automatically_derived]
impl scrapcore_serialization::registry::kind::AssetKindProvider<Option<A>>
for CustomPartialRegistry {
    fn asset_kind() -> Self::AssetKind {
        CustomAsset::TestAsset
    }
}
#[derive(Debug)]
pub struct CustomRegistry {
    test_single: scrapcore_serialization::registry::Singleton<B>,
    test: scrapcore_serialization::registry::ItemCollection<A>,
    test_asset: scrapcore_serialization::registry::AssetsCollection<Option<A>>,
}
#[derive(Debug, Default)]
pub struct CustomPartialRegistry {
    poisoned__: bool,
    test_single: scrapcore_serialization::registry::PartialSingleton<
        B,
        VersionedTestSingle,
    >,
    test: scrapcore_serialization::registry::PartialItemCollection<A, VersionedTest>,
    test_asset: scrapcore_serialization::registry::AssetsCollection<Option<A>>,
}
#[automatically_derived]
impl scrapcore_serialization::registry::SingletonHolder<B> for CustomRegistry {
    fn get_singleton(&self) -> &scrapcore_serialization::registry::Singleton<B> {
        &self.test_single
    }
    fn get_singleton_mut(
        &mut self,
    ) -> &mut scrapcore_serialization::registry::Singleton<B> {
        &mut self.test_single
    }
}
#[automatically_derived]
impl scrapcore_serialization::registry::PartialSingletonHolder<B>
for CustomPartialRegistry {
    type Serialized = VersionedTestSingle;
    fn get_singleton(
        &mut self,
    ) -> &mut scrapcore_serialization::registry::PartialSingleton<
        B,
        VersionedTestSingle,
    > {
        &mut self.test_single
    }
}
#[automatically_derived]
impl scrapcore_serialization::registry::CollectionHolder<A> for CustomRegistry {
    fn get_collection(&self) -> &scrapcore_serialization::registry::ItemCollection<A> {
        &self.test
    }
    fn get_collection_mut(
        &mut self,
    ) -> &mut scrapcore_serialization::registry::ItemCollection<A> {
        &mut self.test
    }
}
#[automatically_derived]
impl scrapcore_serialization::registry::PartialCollectionHolder<A>
for CustomPartialRegistry {
    type Serialized = VersionedTest;
    fn get_collection(
        &mut self,
    ) -> &mut scrapcore_serialization::registry::PartialItemCollection<
        A,
        VersionedTest,
    > {
        &mut self.test
    }
}
#[automatically_derived]
impl scrapcore_serialization::registry::AssetsHolder<Option<A>> for CustomRegistry {
    fn get_assets(
        &self,
    ) -> &scrapcore_serialization::registry::AssetsCollection<Option<A>> {
        &self.test_asset
    }
    fn get_assets_mut(
        &mut self,
    ) -> &mut scrapcore_serialization::registry::AssetsCollection<Option<A>> {
        &mut self.test_asset
    }
}
#[automatically_derived]
impl scrapcore_serialization::registry::SerializationRegistry for CustomRegistry {
    type ItemKind = CustomKind;
    type AssetKind = CustomAsset;
    type Error = ModelError;
}
#[automatically_derived]
impl scrapcore_serialization::registry::SerializationRegistry for CustomPartialRegistry {
    type ItemKind = CustomKind;
    type AssetKind = CustomAsset;
    type Error = ModelError;
}
impl scrapcore_serialization::registry::PartialRegistry for CustomPartialRegistry {
    fn poison(&mut self) {
        self.poisoned__ = true;
    }
    fn is_poisoned(&self) -> bool {
        self.poisoned__
    }
}
impl CustomPartialRegistry {
    pub fn into_registry(
        self,
    ) -> Result<
        CustomRegistry,
        scrapcore_serialization::serialization::error::DeserializationError<
            CustomPartialRegistry,
        >,
    > {
        let mut registry = self;
        scrapcore_serialization::registry::finalize::process_raw_collection::<
            A,
            CustomPartialRegistry,
        >(&mut registry)?;
        scrapcore_serialization::registry::finalize::process_raw_singleton::<
            B,
            CustomPartialRegistry,
        >(&mut registry)?;
        let test = scrapcore_serialization::registry::finalize::convert_partial_collection::<
            A,
            CustomPartialRegistry,
        >(registry.test)?;
        let test_single = scrapcore_serialization::registry::finalize::convert_partial_singleton::<
            B,
            CustomPartialRegistry,
        >(registry.test_single)?;
        let test_asset = registry.test_asset;
        Ok(CustomRegistry {
            test,
            test_single,
            test_asset,
        })
    }
}
impl CustomPartialRegistry {
    pub fn insert(
        &mut self,
        path: impl Into<
            scrapcore_serialization::registry::path_identifier::PathIdentifier,
        >,
        item: CustomSerializedItemName,
    ) -> Result<
        (),
        scrapcore_serialization::serialization::error::DeserializationError<
            CustomPartialRegistry,
        >,
    > {
        let registry = self;
        let path = path.into();
        match item {
            CustomSerializedItemName::Test(item) => {
                scrapcore_serialization::registry::insert::registry_insert::<
                    A,
                    CustomPartialRegistry,
                >(registry, path, item)?
            }
            CustomSerializedItemName::TestSingle(item) => {
                scrapcore_serialization::registry::insert::singleton_insert::<
                    B,
                    CustomPartialRegistry,
                >(registry, path, item)?
            }
        }
        Ok(())
    }
}
